# MySQLite

./: CMakeLists.txt
bld/: Makefile  config.h  config.status  fts5parse.c  lemon  libtclsqlite3.la  libtool  mkkeywordhash  mksourceid  parse.y  sqlite3.pc
bld/.libs/: libtclsqlite3.lai
bld/tsrc/: parse.c  vdbe.c
