cmake_minimum_required(VERSION 3.12)
project(sqlite)

set(CMAKE_CXX_STANDARD 14)

include_directories(bld)
include_directories(bld/tsrc)
include_directories(ext/async)
include_directories(ext/expert)
include_directories(ext/fts1)
include_directories(ext/fts2)
include_directories(ext/fts3)
include_directories(ext/fts5)
include_directories(ext/icu)
include_directories(ext/lsm1)
include_directories(ext/lsm1/lsm-test)
include_directories(ext/rbu)
include_directories(ext/rtree)
include_directories(ext/session)
include_directories(ext/userauth)
include_directories(src)
include_directories(vsixtest)

add_executable(sqlite
        autoconf/tea/win/nmakehlp.c
        bld/tsrc/alter.c
        bld/tsrc/analyze.c
        bld/tsrc/attach.c
        bld/tsrc/auth.c
        bld/tsrc/backup.c
        bld/tsrc/bitvec.c
        bld/tsrc/btmutex.c
        bld/tsrc/btree.c
        bld/tsrc/btree.h
        bld/tsrc/btreeInt.h
        bld/tsrc/build.c
        bld/tsrc/callback.c
        bld/tsrc/complete.c
        bld/tsrc/config.h
        bld/tsrc/ctime.c
        bld/tsrc/date.c
        bld/tsrc/dbpage.c
        bld/tsrc/dbstat.c
        bld/tsrc/delete.c
        bld/tsrc/expr.c
        bld/tsrc/fault.c
        bld/tsrc/fkey.c
        bld/tsrc/fts1.c
        bld/tsrc/fts1.h
        bld/tsrc/fts1_hash.c
        bld/tsrc/fts1_hash.h
        bld/tsrc/fts1_porter.c
        bld/tsrc/fts1_tokenizer.h
        bld/tsrc/fts1_tokenizer1.c
        bld/tsrc/fts2.c
        bld/tsrc/fts2.h
        bld/tsrc/fts2_hash.c
        bld/tsrc/fts2_hash.h
        bld/tsrc/fts2_icu.c
        bld/tsrc/fts2_porter.c
        bld/tsrc/fts2_tokenizer.c
        bld/tsrc/fts2_tokenizer.h
        bld/tsrc/fts2_tokenizer1.c
        bld/tsrc/fts3.c
        bld/tsrc/fts3.h
        bld/tsrc/fts3_aux.c
        bld/tsrc/fts3_expr.c
        bld/tsrc/fts3_hash.c
        bld/tsrc/fts3_hash.h
        bld/tsrc/fts3_icu.c
        bld/tsrc/fts3_porter.c
        bld/tsrc/fts3_snippet.c
        bld/tsrc/fts3_tokenize_vtab.c
        bld/tsrc/fts3_tokenizer.c
        bld/tsrc/fts3_tokenizer.h
        bld/tsrc/fts3_tokenizer1.c
        bld/tsrc/fts3_unicode.c
        bld/tsrc/fts3_unicode2.c
        bld/tsrc/fts3_write.c
        bld/tsrc/fts3Int.h
        bld/tsrc/fts5.c
        bld/tsrc/fts5.h
        bld/tsrc/func.c
        bld/tsrc/geopoly.c
        bld/tsrc/global.c
        bld/tsrc/hash.c
        bld/tsrc/hash.h
        bld/tsrc/hwtime.h
        bld/tsrc/icu.c
        bld/tsrc/insert.c
        bld/tsrc/json1.c
        bld/tsrc/keywordhash.h
        bld/tsrc/legacy.c
        bld/tsrc/loadext.c
        bld/tsrc/main.c
        bld/tsrc/malloc.c
        bld/tsrc/mem0.c
        bld/tsrc/mem1.c
        bld/tsrc/mem2.c
        bld/tsrc/mem3.c
        bld/tsrc/mem5.c
        bld/tsrc/memdb.c
        bld/tsrc/memjournal.c
        bld/tsrc/msvc.h
        bld/tsrc/mutex.c
        bld/tsrc/mutex.h
        bld/tsrc/mutex_noop.c
        bld/tsrc/mutex_unix.c
        bld/tsrc/mutex_w32.c
        bld/tsrc/notify.c
        bld/tsrc/opcodes.c
        bld/tsrc/opcodes.h
        bld/tsrc/os.c
        bld/tsrc/os.h
        bld/tsrc/os_common.h
        bld/tsrc/os_setup.h
        bld/tsrc/os_unix.c
        bld/tsrc/os_win.c
        bld/tsrc/os_win.h
        bld/tsrc/pager.c
        bld/tsrc/pager.h
        bld/tsrc/parse.c
        bld/tsrc/parse.h
        bld/tsrc/pcache.c
        bld/tsrc/pcache.h
        bld/tsrc/pcache1.c
        bld/tsrc/pragma.c
        bld/tsrc/pragma.h
        bld/tsrc/prepare.c
        bld/tsrc/printf.c
        bld/tsrc/random.c
        bld/tsrc/resolve.c
        bld/tsrc/rowset.c
        bld/tsrc/rtree.c
        bld/tsrc/rtree.h
        bld/tsrc/select.c
        bld/tsrc/shell.c
        bld/tsrc/sqlite3.h
        bld/tsrc/sqlite3ext.h
        bld/tsrc/sqlite3rbu.c
        bld/tsrc/sqlite3rbu.h
        bld/tsrc/sqlite3session.c
        bld/tsrc/sqlite3session.h
        bld/tsrc/sqliteicu.h
        bld/tsrc/sqliteInt.h
        bld/tsrc/sqliteLimit.h
        bld/tsrc/status.c
        bld/tsrc/stmt.c
        bld/tsrc/table.c
        bld/tsrc/tclsqlite.c
        bld/tsrc/threads.c
        bld/tsrc/tokenize.c
        bld/tsrc/treeview.c
        bld/tsrc/trigger.c
        bld/tsrc/update.c
        bld/tsrc/upsert.c
        bld/tsrc/utf.c
        bld/tsrc/util.c
        bld/tsrc/vacuum.c
        bld/tsrc/vdbe.c
        bld/tsrc/vdbe.h
        bld/tsrc/vdbeapi.c
        bld/tsrc/vdbeaux.c
        bld/tsrc/vdbeblob.c
        bld/tsrc/vdbeInt.h
        bld/tsrc/vdbemem.c
        bld/tsrc/vdbesort.c
        bld/tsrc/vdbetrace.c
        bld/tsrc/vtab.c
        bld/tsrc/vxworks.h
        bld/tsrc/wal.c
        bld/tsrc/wal.h
        bld/tsrc/walker.c
        bld/tsrc/where.c
        bld/tsrc/wherecode.c
        bld/tsrc/whereexpr.c
        bld/tsrc/whereInt.h
        bld/tsrc/window.c
        bld/config.h
        bld/fts5.c
        bld/fts5.h
        bld/fts5parse.c
        bld/fts5parse.h
        bld/keywordhash.h
        bld/lempar.c
        bld/opcodes.c
        bld/opcodes.h
        bld/parse.c
        bld/parse.h
        bld/shell.c
        bld/sqlite3.c
        bld/sqlite3.h
        bld/sqlite3ext.h
        bld/sqlite3session.h
        ext/async/sqlite3async.c
        ext/async/sqlite3async.h
        ext/expert/expert.c
        ext/expert/sqlite3expert.c
        ext/expert/sqlite3expert.h
        ext/expert/test_expert.c
        ext/fts1/ft_hash.c
        ext/fts1/ft_hash.h
        ext/fts1/fts1.c
        ext/fts1/fts1.h
        ext/fts1/fts1_hash.c
        ext/fts1/fts1_hash.h
        ext/fts1/fts1_porter.c
        ext/fts1/fts1_tokenizer.h
        ext/fts1/fts1_tokenizer1.c
        ext/fts1/fulltext.c
        ext/fts1/fulltext.h
        ext/fts1/simple_tokenizer.c
        ext/fts1/tokenizer.h
        ext/fts2/fts2.c
        ext/fts2/fts2.h
        ext/fts2/fts2_hash.c
        ext/fts2/fts2_hash.h
        ext/fts2/fts2_icu.c
        ext/fts2/fts2_porter.c
        ext/fts2/fts2_tokenizer.c
        ext/fts2/fts2_tokenizer.h
        ext/fts2/fts2_tokenizer1.c
        ext/fts3/tool/fts3view.c
        ext/fts3/fts3.c
        ext/fts3/fts3.h
        ext/fts3/fts3_aux.c
        ext/fts3/fts3_expr.c
        ext/fts3/fts3_hash.c
        ext/fts3/fts3_hash.h
        ext/fts3/fts3_icu.c
        ext/fts3/fts3_porter.c
        ext/fts3/fts3_snippet.c
        ext/fts3/fts3_term.c
        ext/fts3/fts3_test.c
        ext/fts3/fts3_tokenize_vtab.c
        ext/fts3/fts3_tokenizer.c
        ext/fts3/fts3_tokenizer.h
        ext/fts3/fts3_tokenizer1.c
        ext/fts3/fts3_unicode.c
        ext/fts3/fts3_unicode2.c
        ext/fts3/fts3_write.c
        ext/fts3/fts3Int.h
        ext/fts5/fts5.h
        ext/fts5/fts5_aux.c
        ext/fts5/fts5_buffer.c
        ext/fts5/fts5_config.c
        ext/fts5/fts5_expr.c
        ext/fts5/fts5_hash.c
        ext/fts5/fts5_index.c
        ext/fts5/fts5_main.c
        ext/fts5/fts5_storage.c
        ext/fts5/fts5_tcl.c
        ext/fts5/fts5_test_mi.c
        ext/fts5/fts5_test_tok.c
        ext/fts5/fts5_tokenize.c
        ext/fts5/fts5_unicode2.c
        ext/fts5/fts5_varint.c
        ext/fts5/fts5_vocab.c
        ext/fts5/fts5Int.h
        ext/icu/icu.c
        ext/icu/sqliteicu.h
        ext/lsm1/lsm-test/lsmtest.h
        ext/lsm1/lsm-test/lsmtest1.c
        ext/lsm1/lsm-test/lsmtest2.c
        ext/lsm1/lsm-test/lsmtest3.c
        ext/lsm1/lsm-test/lsmtest4.c
        ext/lsm1/lsm-test/lsmtest5.c
        ext/lsm1/lsm-test/lsmtest6.c
        ext/lsm1/lsm-test/lsmtest7.c
        ext/lsm1/lsm-test/lsmtest8.c
        ext/lsm1/lsm-test/lsmtest9.c
        ext/lsm1/lsm-test/lsmtest_bt.c
        ext/lsm1/lsm-test/lsmtest_datasource.c
        ext/lsm1/lsm-test/lsmtest_func.c
        ext/lsm1/lsm-test/lsmtest_io.c
        ext/lsm1/lsm-test/lsmtest_main.c
        ext/lsm1/lsm-test/lsmtest_mem.c
        ext/lsm1/lsm-test/lsmtest_tdb.c
        ext/lsm1/lsm-test/lsmtest_tdb.h
        ext/lsm1/lsm-test/lsmtest_tdb2.cc
        ext/lsm1/lsm-test/lsmtest_tdb3.c
        ext/lsm1/lsm-test/lsmtest_tdb4.c
        ext/lsm1/lsm-test/lsmtest_util.c
        ext/lsm1/lsm-test/lsmtest_win32.c
        ext/lsm1/lsm.h
        ext/lsm1/lsm_ckpt.c
        ext/lsm1/lsm_file.c
        ext/lsm1/lsm_log.c
        ext/lsm1/lsm_main.c
        ext/lsm1/lsm_mem.c
        ext/lsm1/lsm_mutex.c
        ext/lsm1/lsm_shared.c
        ext/lsm1/lsm_sorted.c
        ext/lsm1/lsm_str.c
        ext/lsm1/lsm_tree.c
        ext/lsm1/lsm_unix.c
        ext/lsm1/lsm_varint.c
        ext/lsm1/lsm_vtab.c
        ext/lsm1/lsm_win32.c
        ext/lsm1/lsmInt.h
        ext/misc/amatch.c
        ext/misc/anycollseq.c
        ext/misc/appendvfs.c
        ext/misc/btreeinfo.c
        ext/misc/carray.c
        ext/misc/closure.c
        ext/misc/completion.c
        ext/misc/compress.c
        ext/misc/csv.c
        ext/misc/dbdump.c
        ext/misc/eval.c
        ext/misc/fileio.c
        ext/misc/fuzzer.c
        ext/misc/ieee754.c
        ext/misc/json1.c
        ext/misc/memvfs.c
        ext/misc/mmapwarm.c
        ext/misc/nextchar.c
        ext/misc/normalize.c
        ext/misc/percentile.c
        ext/misc/regexp.c
        ext/misc/remember.c
        ext/misc/rot13.c
        ext/misc/scrub.c
        ext/misc/series.c
        ext/misc/sha1.c
        ext/misc/shathree.c
        ext/misc/showauth.c
        ext/misc/spellfix.c
        ext/misc/sqlar.c
        ext/misc/stmt.c
        ext/misc/templatevtab.c
        ext/misc/totype.c
        ext/misc/unionvtab.c
        ext/misc/vfslog.c
        ext/misc/vfsstat.c
        ext/misc/vtablog.c
        ext/misc/vtshim.c
        ext/misc/wholenumber.c
        ext/misc/zipfile.c
        ext/misc/zorder.c
        ext/rbu/rbu.c
        ext/rbu/sqlite3rbu.c
        ext/rbu/sqlite3rbu.h
        ext/rbu/test_rbu.c
        ext/repair/checkfreelist.c
        ext/repair/checkindex.c
        ext/rtree/geopoly.c
        ext/rtree/rtree.c
        ext/rtree/rtree.h
        ext/rtree/sqlite3rtree.h
        ext/session/changeset.c
        ext/session/session_speed_test.c
        ext/session/sqlite3session.c
        ext/session/sqlite3session.h
        ext/session/test_session.c
        ext/userauth/sqlite3userauth.h
        ext/userauth/userauth.c
        mptest/mptest.c
        src/alter.c
        src/analyze.c
        src/attach.c
        src/auth.c
        src/backup.c
        src/bitvec.c
        src/btmutex.c
        src/btree.c
        src/btree.h
        src/btreeInt.h
        src/build.c
        src/callback.c
        src/complete.c
        src/ctime.c
        src/date.c
        src/dbpage.c
        src/dbstat.c
        src/delete.c
        src/expr.c
        src/fault.c
        src/fkey.c
        src/func.c
        src/global.c
        src/hash.c
        src/hash.h
        src/hwtime.h
        src/insert.c
        src/legacy.c
        src/loadext.c
        src/main.c
        src/malloc.c
        src/mem0.c
        src/mem1.c
        src/mem2.c
        src/mem3.c
        src/mem5.c
        src/memdb.c
        src/memjournal.c
        src/msvc.h
        src/mutex.c
        src/mutex.h
        src/mutex_noop.c
        src/mutex_unix.c
        src/mutex_w32.c
        src/notify.c
        src/os.c
        src/os.h
        src/os_common.h
        src/os_setup.h
        src/os_unix.c
        src/os_win.c
        src/os_win.h
        src/pager.c
        src/pager.h
        src/pcache.c
        src/pcache.h
        src/pcache1.c
        src/pragma.c
        src/pragma.h
        src/prepare.c
        src/printf.c
        src/random.c
        src/resolve.c
        src/rowset.c
        src/select.c
        src/sqlite3ext.h
        src/sqliteInt.h
        src/sqliteLimit.h
        src/status.c
        src/table.c
        src/tclsqlite.c
        src/test1.c
        src/test2.c
        src/test3.c
        src/test4.c
        src/test5.c
        src/test6.c
        src/test7.c
        src/test8.c
        src/test9.c
        src/test_async.c
        src/test_autoext.c
        src/test_backup.c
        src/test_bestindex.c
        src/test_blob.c
        src/test_btree.c
        src/test_config.c
        src/test_delete.c
        src/test_demovfs.c
        src/test_devsym.c
        src/test_fs.c
        src/test_func.c
        src/test_hexio.c
        src/test_init.c
        src/test_intarray.c
        src/test_intarray.h
        src/test_journal.c
        src/test_loadext.c
        src/test_malloc.c
        src/test_md5.c
        src/test_multiplex.c
        src/test_multiplex.h
        src/test_mutex.c
        src/test_onefile.c
        src/test_osinst.c
        src/test_pcache.c
        src/test_quota.c
        src/test_quota.h
        src/test_rtree.c
        src/test_schema.c
        src/test_server.c
        src/test_sqllog.c
        src/test_superlock.c
        src/test_syscall.c
        src/test_tclsh.c
        src/test_tclvar.c
        src/test_thread.c
        src/test_vfs.c
        src/test_vfstrace.c
        src/test_windirent.c
        src/test_windirent.h
        src/test_window.c
        src/test_wsd.c
        src/threads.c
        src/tokenize.c
        src/treeview.c
        src/trigger.c
        src/update.c
        src/upsert.c
        src/utf.c
        src/util.c
        src/vacuum.c
        src/vdbe.c
        src/vdbe.h
        src/vdbeapi.c
        src/vdbeaux.c
        src/vdbeblob.c
        src/vdbeInt.h
        src/vdbemem.c
        src/vdbesort.c
        src/vdbetrace.c
        src/vtab.c
        src/vxworks.h
        src/wal.c
        src/wal.h
        src/walker.c
        src/where.c
        src/wherecode.c
        src/whereexpr.c
        src/whereInt.h
        src/window.c
        test/atrc.c
        test/crashtest1.c
        test/dbfuzz.c
        test/fuzzcheck.c
        test/kvtest.c
        test/optfuzz-db01.c
        test/optfuzz.c
        test/ossfuzz.c
        test/ossshell.c
        test/sessionfuzz.c
        test/speedtest1.c
        test/threadtest1.c
        test/threadtest2.c
        test/threadtest3.c
        test/threadtest4.c
        test/tt3_checkpoint.c
        test/tt3_index.c
        test/tt3_lookaside1.c
        test/tt3_stress.c
        test/tt3_vacuum.c
        test/wordcount.c
        tool/checkSpacing.c
        tool/dbhash.c
        tool/extract.c
        tool/fast_vacuum.c
        tool/fuzzershell.c
        tool/getlock.c
        tool/lemon.c
        tool/lempar.c
        tool/libvers.c
        tool/loadfts.c
        tool/logest.c
        tool/max-limits.c
        tool/mkkeywordhash.c
        tool/mksourceid.c
        tool/offsets.c
        tool/pagesig.c
        tool/rollback-test.c
        tool/showdb.c
        tool/showjournal.c
        tool/showlocks.c
        tool/showshm.c
        tool/showstat4.c
        tool/showwal.c
        tool/speedtest16.c
        tool/speedtest8.c
        tool/speedtest8inst1.c
        tool/sqldiff.c
        tool/srcck1.c
        tool/varint.c
        vsixtest/App.xaml.cpp
        vsixtest/App.xaml.h
        vsixtest/MainPage.xaml.cpp
        vsixtest/MainPage.xaml.h
        vsixtest/pch.cpp
        vsixtest/pch.h)
